<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NVKF</string>    
    <string name="tabNews">Nieuws</string>
    <string name="tabJobs">Vacatures</string>
    <string name="tabSearch">Zoeken</string>    
    <string name="menuAbout">Over &#8230;</string>
    <string name="menuInstellingen">Instellingen</string>
    <string-array name="ververs_text">
        <item >Nooit</item>
        <item >Elk uur</item>
        <item >Elke 2 uur</item>
        <item >Elke 3 uur</item>
        <item >Elke 4 uur</item>
        <item >Elke 6 uur</item>
        <item >Elke 12 uur</item>
        <item >Een keer per dag</item>
    </string-array>
    <string-array name="ververs_int">
		<item >0</item>
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >6</item>
        <item >12</item>
        <item >24</item>
    </string-array>
    <string name="about_title">Over de NVKP-app</string>
    <string name="about_message">Met deze applicatie zijn de meest gebruikte onderdelen van de NVKF-site (nieuws, vacatures en ledenlijst) te bekijken.\n\nDeze applicatie is op persoonlijke titel ontwikkeld, dus gebruik is geheel op eigen risico en garantie voor support kan niet gegeven worden. Wel sta ik open voor suggesties ter verbetering.\n\nMocht je een bug of suggestie voor verbetering tegenkomen, laat het me weten, wie weet is het in de volgende versie opgelost.</string>
    <string name="menuRefresh">Verversen</string>
    <string name="prefOpslaan">Opslaan</string>
    <string name="prefAnnuleren">Annuleren</string>
    <string name="btnZoekLeden">Zoeken</string>
    <string name="uitlegLedenlijst">Voer minimaal 3 letters in van de naam (voor- of achternaam) van het NVKF-lid dat u zoekt</string>
    <string name="defaultTitle">Standaard titel</string>
    <string name="defaultText">Standaard tekst</string>
    <string name="ledenTitel">Titel:</string>
	<string name="ledenVoorletters">Voorletters:</string>
	<string name="ledenVoornaam">Voornaam:</string>
	<string name="ledenTussenvoegsel">Tussenvoegsel:</string>
	<string name="ledenAchternaam">Achternaam:</string>
	<string name="ledenGeboortenaam">Geboortenaam:</string>
	<string name="ledenInstituut">Instituut gegevens:</string>
	<string name="instituutNaam">Naam:</string>
	<string name="instituutAdres">Adres:</string>
	<string name="instituutAfdeling">Afdeling:</string>
	<string name="instituutPostcode">Postcode:</string>
	<string name="instituutPlaats">Plaats:</string>
	<string name="ledenMail">Zakelijk e-mail:</string>
	<string name="ledenTel1">Telefoonnummer\nzakelijk:</string>
	<string name="ledenTel2">Telefoonnummer\nzakelijk 2:</string>
	<string name="ledenPrive">Prive gegevens:</string>
	<string name="priveGeboorte">Geboortedatum:</string>
	<string name="priveAdres">Adres:</string>
	<string name="privePostcode">Postcode:</string>
	<string name="privePlaats">Plaats:</string>
	<string name="priveTelefoon">Telefoon:</string>
	<string name="priveMobiel">Mobiel:</string>
	<string name="priveMail">E-mail:</string>
	<string name="aboutVersion">2.6.1</string>
	<string name="knopUp">overzicht</string>
	<string name="knopPrev">vorige</string>
	<string name="knopNext">volgende</string>
	
	
	
	<!-- Contact synchronisatie -->
    <string name="label">NVKF Ledenlijst</string>
    <string name="ui_activity_title">Login</string>
    <string name="ui_activity_authenticating">Account controleren</string>
    <string name="login_activity_username_label">Gebruikersnaam</string>
    <string name="login_activity_password_label">Wachtwoord</string>
    <string name="login_activity_ok_button">Login</string>
    <string name="login_activity_loginfail_text_both">De combinatie van gebruikersnaam en wachtwoord is geen geldig NVKF-account. Probeer het nogmaals</string>
    <string name="login_activity_loginfail_text_pwonly">Het wachtwoord is onjuist. Probeer nogmaals.</string>
    <string name="login_activity_loginfail_text_pwmissing">Voer wachtwoord in</string>
    <string name="login_activity_newaccount_text">Login met de gebruikersnaam en wachtwoord van uw NVKF-account</string>
    <string name="sign_in_button_label">Login</string>
    <string name="back_button_label">Terug</string>
    <string name="cancel_button_label">Annuleer</string>	
</resources>